Primeros cambios visuales.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-genai-startup-theme",
+  "name": "heka-it",
   "type": "module",
   "version": "1.0.0",
   "description": "A modern, free Astro theme template for GenAI startups with dark/light mode toggle",
